# preditor_altura

./: README.md  main.py  pyproject.toml  requirements.txt
Logic/: definitions.py  predicao_altura.ipynb  predicao_altura.py
Models/: trained_model.pkl
